[package]
name = "draco_utilities"
version = "0.1.0"
authors = ["Eucladia <EucladiaLyra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "custom_float_radix"
harness = false

[[bench]]
name = "decode_uri"
harness = false

[[bench]]
name = "encode_uri"
harness = false

[[bench]]
name = "rng"
harness = false